﻿IMPROVEMENTS / FIXES
- General:
	- Fix part filtering by search terms in the editors.
- AI / WM:
	- Invert the roll target when the fly-to direction is below and behind the craft within the Immelmann turn angle.
	- Fix automatic gun range adjustments in the WM again.
- Weapons:
	- Corrections to penetration and ricochet velocity changes and ricochet positions.
	- Missiles:
		- Fix mass changes of missiles that decouple boosters and add missile mass debug telemetry.
		- Fix radar and heat targeting leading targets excessively (most apparent in orbit)
		- Change spacing missiles with continous warhead from Detonation Distance / 3 to  Min(Blast Radius / 3, Detonation Distance / 3)

v1.6.9.0
IMPROVEMENTS / FIXES
- UI:
	- Fix the alternate (hidden UI) window locations (for scores and vessel switcher) not being saved correctly.
- General:
	- New texture for 1.25m radomes.
	- Add a max distance threshold setting to Team Icons.
	- Fix "Camera Switch: Incl. Missiles" not switching to missiles about to hit their target.
- AI / WM:
	- Add new Orbital AI part for spacecraft in orbit:
		- The Orbital AI will use orbital maneuvers to close within gun range of the target to fire weapons. It will also automatically fire missiles when able.
		- The AI will maneuver at the Maneuver Speed setting and once within gun range try to fire guns while at the Strafe Speed setting.
		- It will evade missiles based on the countermeasure settings on the Weapons Manager and evade gunfire using AI settings similar to those on the Pilot AI.
		- When spawned at orbital altitudes using the BDA Vessel Spawner, craft with the Orbital AI will be automatically spawned into orbit (other options for orbital spawning are cheat menu and HyperEdit mod).
		- Orbital AI is adapted from the StockCombatAI (KCS) mod, check it out here https://github.com/Halbann/StockCombatAI/releases!