@@ -541,9 +541,9 @@ namespace BDArmory.Control
             var ap = vessel.Autopilot;
             if (ap == null) return;
 
-            // The offline SAS must not be on stability assist. Normal seems to work on most probes.
-            if (ap.Mode != VesselAutopilot.AutopilotMode.Normal)
-                ap.SetMode(VesselAutopilot.AutopilotMode.Normal);
+            // The offline SAS must not be on stability assist. Prograde seems to work on most probes (those with at least SASServiceLevel = 1).
+            if (ap.Mode != VesselAutopilot.AutopilotMode.Prograde)
+                ap.SetMode(VesselAutopilot.AutopilotMode.Prograde);
 
             // Lerp attitude while burning to reduce instability.
             if (lerpAttitude)
