@@ -1,11 +1,15 @@
 ﻿IMPROVEMENTS / FIXES
 - General:
 	- Fix part filtering by search terms in the editors.
+	- Fix Krakensbane adjustments when the active vessel dies.
+	- Fix tracer visuals when the active vessel dies.
+	- Adjust timing and conditions for auto-camera switching to and away from missiles.
 - AI / WM:
 	- Invert the roll target when the fly-to direction is below and behind the craft within the Immelmann turn angle.
 	- Fix automatic gun range adjustments in the WM again.
 - Weapons:
 	- Corrections to penetration and ricochet velocity changes and ricochet positions.
+	- Stop APS firing at dead missiles.
 	- Missiles:
 		- Fix mass changes of missiles that decouple boosters and add missile mass debug telemetry.
 		- Fix radar and heat targeting leading targets excessively (most apparent in orbit)
